<resources>
    <string name="app_name">Lab02_Exploits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="itemList">itemList</string>
    <string name="full_name">full_name</string>
    <string name="nickname">nickname</string>
    <string name="location">location</string>
    <string name="email">email@address.com</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="save">Save</string>
    <string name="select_photo_from_gallery">gallery_photo</string>
    <string name="take_picture">take_picture</string>
    <string name="show_profile">Show Profile</string>
    <string name="item_list">Item List</string>
    <string name="insert_date">Insert Date</string>
    <string name="delete_item">Delete Item</string>
    <string name="list_of_items">List Of Items</string>

    <string name="sign_in">Sign In</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="create_account">Create Account</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s </string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="pasword">pasword</string>
    <string name="password">password</string>
    <string name="on_sale_items">Sale Products</string>
    <string name="block_item">Block Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">DefaultNotificationForNow</string>
    <string name="bought_items">Purchased Products</string>
    <string name="like_items">Liked Products</string>
    <string name="my_items">My Products</string>


</resources>
