<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="30dp"

    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageButton
        android:id="@+id/photoEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingVertical="30dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_photo_camera_black" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:orientation="vertical"
        android:paddingVertical="15dp">


        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="0dp"
            android:textSize="25sp"
            android:hint="@string/enter_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nicknameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="0dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/enter_nickname"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/locationEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="textPostalAddress"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="30dp"
            android:text="Location"
            android:hint="@string/location"
            android:textSize="25sp" />

        <Button
            android:id="@+id/changeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="20dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0.0"
            android:background="@drawable/buttonshape"
            android:text="Edit account"
            android:textColor="#FBFBFB" />


        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textWebEmailAddress"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/email"
            android:textSize="26sp" />


        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="0dp"
            android:hint="@string/password"
            android:textSize="26sp"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/SavePassword"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#FBFBFB"
            android:background="@drawable/buttonshape"
            android:paddingHorizontal="10dp"
            android:text="save"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>