<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEF8F9FA"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/showloginfields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon1"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="50dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/secondhands" />

        <TextView
            android:id="@+id/status1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="Please Sign In to Continue"
            android:textColor="#5B5959"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/tosigninbutton"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rbshape"
            android:gravity="center"
            android:text="SIGN IN"
            android:textColor="#FBFBFB"
            android:textSize="24sp" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/profilefields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:paddingTop="40dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_photo_camera_black" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="Average Rating : "
                android:textColor="#03A9EA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ratingnumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="left|center_vertical"
                android:textColor="#03A9EA"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#E7EAEC"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/full_name"
            android:textColor="#171616"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nickname"
            android:background="#E7EAEC"
            android:textColor="#171616"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:background="#E7EAEC"
            android:textColor="#171616"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/location"
            android:textColor="#171616"
            android:gravity="center_vertical"
            android:background="#E7EAEC"
            android:textSize="25sp" />



        <com.google.android.gms.maps.MapView
            android:id="@+id/mapUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="#CEF8F9FA"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
